Request colored output in CI
(cherry picked from commit dd4f0c456f0cbfbc461967899f742efc6dbd6c78)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,11 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
   cancel-in-progress: true
 
+env:
+  COLOR: yes
+  FORCE_COLOR: 1  # Request colored output from CLI tools supporting it
+  MYPY_FORCE_COLOR: 1
+  PY_COLORS: 1
 
 jobs:
 
