Fix a typo: s/disctributions/distributions/
(cherry picked from commit 0116cfddbf140cdafeefd1638382d4e0d1ab19e4)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -361,7 +361,7 @@ jobs:
     - name: Login
       run: |
         echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
-    - name: Download disctributions
+    - name: Download distributions
       uses: actions/download-artifact@v3
       with:
         name: dist
