build: harden update-pre-commit.yml permissions
Signed-off-by: Alex <aleksandrosansan@gmail.com>

--- a/.github/workflows/update-pre-commit.yml
+++ b/.github/workflows/update-pre-commit.yml
@@ -2,6 +2,7 @@ name: Pre-commit auto-update
 on:
   schedule:
   - cron: '0 0 * * *'
+permissions: {}
 jobs:
   auto-update:
     if: github.repository_owner == 'aiohttp'
