--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,7 +2,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "master", "3.0", "3.1", "3.2", "3.3", "3.4", "3.5", "3.6", "3.7", "3.8", "3.9" ]
+    branches:
+      - 'master'
+      - '[0-9].[0-9]+'  # matches to backport branches, e.g. 3.6
   pull_request:
     branches: [ "master" ]
   schedule:
