--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,9 +69,9 @@ jobs:
         # can be scanned by slotscheck.
         pip install -r requirements/base.txt -c requirements/constraints.txt
         slotscheck -v -m aiohttp
-    - name: Install libenchant-dev
+    - name: Install libenchant
       run: |
-        sudo apt install libenchant-dev
+        sudo apt install libenchant-2-dev
     - name: Install spell checker
       run: |
         pip install -r requirements/doc-spelling.txt -c requirements/constraints.txt
