--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,38 +117,38 @@ jobs:
     needs: gen_llhttp
     strategy:
       matrix:
-        pyver: ['3.6.15', 3.7, 3.8, 3.9, '3.10']
+        pyver: [3.6, 3.7, 3.8, 3.9, '3.10']
         no-extensions: ['', 'Y']
-        os: [ubuntu, macos, windows]
+        os: [ubuntu-20.04, macos-latest, windows-latest]
         exclude:
-          - os: macos
+          - os: macos-latest
             no-extensions: 'Y'
-          - os: macos
+          - os: macos-latest
             pyver: 3.7
-          - os: macos
+          - os: macos-latest
             pyver: 3.8
-          - os: windows
+          - os: windows-latest
             no-extensions: 'Y'
         experimental: [false]
         include:
           - pyver: pypy-3.8
             no-extensions: 'Y'
-            os: ubuntu
+            os: ubuntu-latest
             experimental: false
-          - os: macos
+          - os: macos-latest
             pyver: "3.11.0-alpha - 3.11.0"
             experimental: true
             no-extensions: 'Y'
-          - os: ubuntu
+          - os: ubuntu-latest
             pyver: "3.11.0-alpha - 3.11.0"
             experimental: false
             no-extensions: 'Y'
-          - os: windows
+          - os: windows-latest
             pyver: "3.11.0-alpha - 3.11.0"
             experimental: true
             no-extensions: 'Y'
       fail-fast: true
-    runs-on: ${{ matrix.os }}-latest
+    runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
     steps:
     - name: Checkout
