--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,4 +1,5 @@
 [mypy]
+ignore_errors = True  # Only for 3.8 branch which is already EOL
 files = aiohttp, examples
 check_untyped_defs = True
 follow_imports_for_stubs = True
