--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,4 +1,6 @@
 [mypy]
+# Only for 3.8 branch which is already EOL
+ignore_errors = True
 files = aiohttp, examples
 check_untyped_defs = True
 follow_imports_for_stubs = True
