--- a/setup.cfg
+++ b/setup.cfg
@@ -93,6 +93,7 @@ per-file-ignores =
     examples/*:I900
 
 # flake8-requirements
+known-modules = proxy.py:[proxy]
 requirements-file = requirements/test.txt
 requirements-max-depth = 4
 
