--- a/setup.cfg
+++ b/setup.cfg
@@ -89,6 +89,14 @@ zip_ok = false
 # TODO: don't disable D*, fix up issues instead
 ignore = N801,N802,N803,E203,E226,E305,W504,E252,E301,E302,E704,W503,W504,F811,D1,D4
 max-line-length = 88
+per-file-ignores =
+    # I900: Shouldn't appear in requirements for examples.
+    examples/*:I900
+
+# flake8-requirements
+known-modules = proxy.py:[proxy]
+requirements-file = requirements/test.txt
+requirements-max-depth = 4
 
 [isort]
 line_length=88
