--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,7 +133,7 @@ jobs:
     needs: gen_llhttp
     strategy:
       matrix:
-        pyver: [3.7, 3.8, 3.9, '3.10']
+        pyver: [3.8, 3.9, '3.10']
         no-extensions: ['', 'Y']
         os: [ubuntu, macos, windows]
         experimental: [false]
@@ -141,13 +141,11 @@ jobs:
           - os: macos
             no-extensions: 'Y'
           - os: macos
-            pyver: 3.7
-          - os: macos
             pyver: 3.8
           - os: windows
             no-extensions: 'Y'
         include:
-          - pyver: pypy-3.8
+          - pyver: pypy-3.10
             no-extensions: 'Y'
             os: ubuntu
             experimental: false
