Upgrade chat links and badges to Matrix

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,8 @@ name = aiohttp
 version = attr: aiohttp.__version__
 url = https://github.com/aio-libs/aiohttp
 project_urls =
-  Chat: Gitter = https://gitter.im/aio-libs/Lobby
+  Chat: Matrix = https://matrix.to/#/#aio-libs:matrix.org
+  Chat: Matrix Space = https://matrix.to/#/#aio-libs-space:matrix.org
   CI: GitHub Actions = https://github.com/aio-libs/aiohttp/actions?query=workflow%%3ACI
   Coverage: codecov = https://codecov.io/github/aio-libs/aiohttp
   Docs: Changelog = https://docs.aiohttp.org/en/stable/changes.html
