ci-cd.yml: GitHub Actions: Deprecate set-output command
Warnings on our GitHub Actions output:

The `set-output` command is deprecated and will be disabled soon. Please upgrade to using Environment Files. For more information see: https://github.blog/changelog/2022-10-11-github-actions-deprecating-save-state-and-set-output-commands/

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -177,7 +177,7 @@ jobs:
     - name: Get pip cache dir
       id: pip-cache
       run: |
-        echo "::set-output name=dir::$(pip cache dir)"    # - name: Cache
+        echo "{dir}={$(pip cache dir)}" >> $GITHUB_OUTPUT
     - name: Cache PyPI
       uses: actions/cache@v3.0.4
       with:
