--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -177,7 +177,7 @@ jobs:
     - name: Get pip cache dir
       id: pip-cache
       run: |
-        echo "{dir}={$(pip cache dir)}" >> $GITHUB_OUTPUT
+        echo "{dir}={$(echo $(pip cache dir))}" >> $GITHUB_OUTPUT
     - name: Cache PyPI
       uses: actions/cache@v3.0.4
       with:
