Add experimental 3.12 tests

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -150,15 +150,27 @@ jobs:
             os: ubuntu
             experimental: false
           - os: macos
-            pyver: "3.11.0-alpha - 3.11.0"
+            pyver: "3.11"
             experimental: true
             no-extensions: 'Y'
           - os: ubuntu
-            pyver: "3.11.0-alpha - 3.11.0"
+            pyver: "3.11"
             experimental: false
             no-extensions: 'Y'
           - os: windows
-            pyver: "3.11.0-alpha - 3.11.0"
+            pyver: "3.11"
+            experimental: true
+            no-extensions: 'Y'
+          - os: ubuntu
+            pyver: "3.12"
+            experimental: true
+            no-extensions: 'Y'
+          - os: macos
+            pyver: "3.12"
+            experimental: true
+            no-extensions: 'Y'
+          - os: windows
+            pyver: "3.12"
             experimental: true
             no-extensions: 'Y'
       fail-fast: true
@@ -173,6 +185,7 @@ jobs:
       id: python-install
       uses: actions/setup-python@v4
       with:
+        allow-prereleases: true
         python-version: ${{ matrix.pyver }}
     - name: Get pip cache dir
       id: pip-cache
